修改了无序列表标志

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 				
 			    /*list-style: none*/
 			}
+			ul,li,ol{
+				list-style: none;
+			}
 			img {
 			    border: 0;
 			    vertical-align: middle
