--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 			}
 			li {
 				
-			    /*list-style: none*/
+			    list-style: none;
+			    font-size: 0.138888rem;
 			}
 			ul,li,ol{
 				list-style: none;
