--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 			button {
 			    cursor: pointer
 			}
+			div#mydiv{
+				width: 1.041666rem;
+			}
 			a {
 			    color: #666;
 			    text-decoration: none
