--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			div#mydiv{
 				width: 1.041666rem;
 				height: 1.041666rem;
+				margin-left: 1.041666rem;
 			}
 			a {
 			    color: #666;
