--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 				width: 1.041666rem;
 				height: 1.041666rem;
 				margin-left: 1.041666rem;
+				border: 1px solid red;
 			}
 			a {
 			    color: #666;
