--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			li {
 				
 			    list-style: none;
-			    font-size: 0.138888rem;
+			    font-size: 0.138888rem;   
 			}
 			ul,li,ol{
 				list-style: none;
@@ -38,6 +38,7 @@
 				height: 1.041666rem;
 				margin-left: 1.041666rem;
 				border: 1px solid red;
+				padding: 0.625rem;
 			}
 			a {
 			    color: #666;
