--- a/index.html
+++ b/index.html
@@ -21,7 +21,22 @@
 			li {
 				
 			    list-style: none;
-			    font-size: 0.138888rem;   
+			    font-size: 0.138888rem;
+			}
+			ul,li,ol{
+				list-style: none;
+			}
+			img {
+			    border: 0;
+			    vertical-align: middle
+			}
+			
+			ul,li,ol{
+				list-style: none;
+			}
+			img {
+			    border: 0;
+			    vertical-align: middle
 			}
 			ul,li,ol{
 				list-style: none;
@@ -36,9 +51,7 @@
 			div#mydiv{
 				width: 1.041666rem;
 				height: 1.041666rem;
-				margin-left: 1.041666rem;
-				border: 1px solid red;
-				padding: 0.625rem;
+				/*margin-left: ;*/
 			}
 			a {
 			    color: #666;
