--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 			.header .center_left,.header .center_right{
 				display: inline-block;  /*转为行内块*/
 				height: 100%;
-				width: 50%;
+				/*width: 50%;*/
+				padding: 0.069444rem;
 			}
 			.header .right i{
 				float: right;
@@ -105,8 +106,9 @@
 		<div class="header">
 			<div class="left"></div>
 			<div class="center">
-				<span class="center_left">和高校</span>
+				<span class="center_left">和校</span>
 				<span class="center_right">新闻公告</span>
+				<span class="center_left">和校</span>
 				<span class="center_right">新闻公告1</span>
 			</div>
 			<div class="right"><i class="icon-guanyanren"></i></div>
