--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 				background-color: #00aeef;
 				height: 1.243055rem;
 				/*line-height: 1.243055rem;*/
+				我是新增加的功能
 			}
 			.left,.right{
 				width: 2.777777rem;
