--- a/1day/index.html
+++ b/1day/index.html
@@ -6,7 +6,12 @@
 	</head>
 	<body>
 		<script>
-			
+			console.log(1)
+			console.log(1)
+			console.log(1)
+			console.log(1)
+			console.log(1)
+			console.log(1)
 			function getXhr(){
 				if( window.XMLHttpRequest){
 					//现代浏览器
